feat(reminder): cria rota, controlador, serviço, repositório e documentação swagger do modelo reminder e injeta dependências no container
