# src/app/interfaces/request/reminder-request.ts
@@ -1,0 +1,8 @@
+export default interface IReminderRequest {
+	id?: number
+	name: string
+	color?: string
+	categoryId?: number
+	description?: string
+	scheduledAt?: string
+}
