# src/app/routes/reminder-routes.ts
@@ -1,9 +1,9 @@
 import express, { Request, Response } from 'express'
 
-import CategoryController from '../controllers/category-controller'
+import ReminderController from '../controllers/reminder-controller'
 
 const routes = express.Router()
-const controller = new CategoryController()
+const controller = new ReminderController()
 
 routes.post('/', (req: Request, res: Response) => {
 	controller.create(req, res)
@@ -13,11 +13,11 @@ routes.get('/', (req: Request, res: Response) => {
 	controller.findAll(req, res)
 })
 
-routes.get('/:category_id', (req: Request, res: Response) => {
+routes.get('/:reminder_id', (req: Request, res: Response) => {
 	controller.findById(req, res)
 })
 
-routes.put('/:category_id', (req: Request, res: Response) => {
+routes.put('/:reminder_id', (req: Request, res: Response) => {
 	controller.update(req, res)
 })
 
@@ -25,7 +25,7 @@ routes.delete('/', (req: Request, res: Response) => {
 	controller.deleteAll(req, res)
 })
 
-routes.delete('/:category_id', (req: Request, res: Response) => {
+routes.delete('/:reminder_id', (req: Request, res: Response) => {
 	controller.deleteById(req, res)
 })
 
